navbar, mobile view, about me added

--- a/am-website/src/app/components/landing/landing.component.html
+++ b/am-website/src/app/components/landing/landing.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
     <div class="page-header section-dark"
-        style="background-image: url('https://hdwallsource.com/img/2015/6/snowy-forest-wallpaper-45946-47227-hd-wallpapers.jpg')">
+        style="background-image: url('./assets/img/landing.jpg')">
         <div class="filter"></div>
         <div class="content-center">
             <div class="container">
@@ -15,7 +15,6 @@
     </div>
 
     <div class="main">
-        <app-profile></app-profile>
         <app-certs></app-certs>
     </div>
 </div>
