--- a/am-website/src/app/components/profile/profile.component.html
+++ b/am-website/src/app/components/profile/profile.component.html
@@ -1,20 +1,32 @@
 <div class="wrapper">
+    <div class="page-header page-header-xs" style="background-image: url('./assets/img/landing.jpg');">
+        <div class="filter"></div>
+    </div>
     <div class="section profile-content">
         <div class="container">
             <div class="owner">
-            <br/>
+                <br />
                 <div class="avatar">
-                    <img src="./assets/img/IMG_04412.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
+                    <img src="./assets/img/IMG_0213.JPG" alt="Circle Image"
+                        class="img-circle img-no-padding img-responsive">
                 </div>
                 <div class="name">
-                    <h4 class="title">Alexandra Milevich<br /></h4>
-                    <h6 class="description">About Me</h6>
+                    <h4 class="title">Alex<br /></h4>
+                    <h6>About Me</h6>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 ml-auto mr-auto text-center">
-                    <p>Senior Software Developer with 3 years of JAVA/J2EE Full Stack Development Experience in multi-tier enterprise-level applications. Proven skills in organizing, multitasking and resolving conflicts. Known for goal-oriented mindset and positive attitude.</p>
+                    <h5 style="color:black">I am a Senior Software Developer with 3 years of JAVA/J2EE Full-Stack
+                        Development Experience in multi-tier enterprise-level applications. Proven skills in organizing,
+                        multitasking and resolving conflicts. Known for goal-oriented mindset and positive attitude.
+                    </h5>
                 </div>
+            </div>
+            <div class="row" class="col-md-6 ml-auto mr-auto text-center">
+                <br/>
+                <h6>Contact Information:</h6>
+                <h6 class="description">Email: alexandra.i.milevich@gmail.com</h6>
             </div>
         </div>
     </div>
